--- a/trafficviolationbackend/templates/base.html
+++ b/trafficviolationbackend/templates/base.html
@@ -13,7 +13,7 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row justify-content-center p-5">
+    <div class="row justify-content-center p-lg-5 p-xs-0">
       <div class="col-lg-10 col-md-12 col-sm-12">
         <div class="card rounded-lg">
           <div class="card-body rounded shadow-lg bg-dark text-light">
