--- a/trafficviolationbackend/templates/home.html
+++ b/trafficviolationbackend/templates/home.html
@@ -7,32 +7,32 @@
     {% csrf_token %}
 
     <div class="form-row mb-3 ">
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.officer_name|as_crispy_field }}
       </div>
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.start_time|as_crispy_field }}
       </div>
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.video_taken_time|as_crispy_field }}
       </div>
     </div>
     <div class="form-row mb-3 ">
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.red_duration|as_crispy_field }}
       </div>
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.yellow_duration|as_crispy_field }}
       </div>
-      <div class="form-group col-md-4 mb-0">
+      <div class="form-group col-md-4 col-sm-6 col-xs-12 mb-0">
         {{ form.green_duration|as_crispy_field }}
       </div>
     </div>
     <div class="form-row mb-3 d-flex justify-content-center">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 col-xs-12">
             {{ form.position|as_crispy_field }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6 col-xs-12">
             {{ form.video|as_crispy_field }}
         </div>
     </div>
